--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ main: me.kaotich00.easyranking.Easyranking
 api-version: 1.13
 authors: [Kaotich00]
 description: A simple and lightweight plugin for custom Ranking Systems
+commands:
+  er:
+    description: Main EasyRanking command
+    usage: /<command>
+    aliases: [er, easyranking]
