--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
+            <id>rayzr-repo</id>
+            <url>https://rayzr.dev/repo/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -100,6 +108,22 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ForgottenWorld</groupId>
+            <artifactId>FWDungeons</artifactId>
+            <version>-9ec5ba746b-1</version>
+        </dependency>
+        <dependency>
+            <groupId>me.rayzr522</groupId>
+            <artifactId>jsonmessage</artifactId>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 </project>
