--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,8 +5,8 @@ api-version: 1.13
 authors: [Kaotich00]
 description: A simple and lightweight plugin for custom Ranking Systems
 depend: [Vault]
-softdepend: [PlaceholderAPI,FWDungeons]
-loadafter: [Vault,PlaceholderAPI,FWDungeons]
+softdepend: [PlaceholderAPI,FWDungeons,Bounties]
+loadafter: [Vault,PlaceholderAPI,FWDungeons,Bounties]
 commands:
   er:
     description: Main EasyRanking command
