Fixed inconsistencies, chat support for 1.16 and bumped to 0.1.1

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -91,3 +91,9 @@ oresMined:
 # unless you want very big trouble
 dungeons:
   enabled: true
+
+# BOUNTY LEADERBOARD
+# Please never ever change the leaderboard node name,
+# unless you want very big trouble
+bounties:
+  enabled: true
