--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             <version>0.96.2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.mrmicky</groupId>
+            <artifactId>FastBoard</artifactId>
+            <version>1.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
